# FAST_LIO_lean

./: CMakeLists.txt  README.md  package.xml
config/: robosense.yaml  robosense_sim.yaml
fast_lio_lean/: CMakeLists.txt  package.xml
fast_lio_lean/config/: velodyne.yaml
fast_lio_lean/include/: common_lib.h
fast_lio_lean/src/: laserMapping.cpp
fast_lio_msg_srv/: CMakeLists.txt  package.xml
include/: common_lib.h
launch/: mapping.launch  mapping.launch.py  sensor_bringup.launch.py
rviz/: fast_lio_debug.rviz
src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
srv/: neighbor_points.srv
