<?xml version="1.0"?>
<package format="3">
  <name>fast_lio</name>
  <version>0.0.0</version>

  <description>
    This is a modified version of LOAM which is original algorithm
    is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
    Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>

  <maintainer email="dev@livoxtech.com">claydergc</maintainer>

  <license>BSD</license>

  <author email="zhangji@cmu.edu">Ji Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fast_lio_msg_srv</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>message_runtime</depend>

</package>
