<?xml version="1.0"?>
<package format="3">
  <name>fast_lio_msg_srv</name>
  <version>0.0.0</version>

  <description>
    This is a modified version of LOAM which is original algorithm
    is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
    Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
    Provides srv / msg files
  </description>

  <maintainer email="dev@livoxtech.com">claydergc</maintainer>

  <license>BSD</license>

  <author email="zhangji@cmu.edu">Ji Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

</package>
